--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ before_install:
   - docker build -t anirbanx/docker-react -f Dockerfile.dev .
   
 script:
-  - docker run -e CI=true anirbanx/docker-react npm tun test
+  - docker run -e CI=true anirbanx/docker-react npm run test
