--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t anirbanx/docker-react -f Dockerfile .
+  - docker build -t anirbanx/docker-react -f Dockerfile.dev .
   
 script:
   - docker run -e CI=true anirbanx/docker-react npm run test
